# DatabaseManagementSystems

./: .gitignore  dberror.h  storage_mgr.c  test_assign1_1.c
assign3_record_manager/__MACOSX/: ._assign3_record_manager
assign3_record_manager/__MACOSX/assign3_record_manager/: ._rm_serializer.c  ._test_assign3_1.c
assignment-1/: CMakeLists.txt  Makefile  README.txt  dberror.c  readme.txt  storage_mgr.c  test_assign1_1.c
assignment-2/: CMakeLists.txt  Makefile  ReadMe.md  buffer_mgr.c  buffer_mgr.h  dberror.h  test_assign2_1.c  test_assign2_2.c
assignment-3/: CMakeLists.txt  Makefile  README.md  buffer_mgr.c  cli.c  employee  record_mgr.c  rm_serializer.c  storage_mgr.c  test_assign3_1.c  test_table_t
assignment-3/assign3_record_manager/__MACOSX/assign3_record_manager/: ._dberror.h
assignment-4/: CMakeLists.txt  Makefile  README.md  btree_mgr.c  btree_mgr.h  buffer_mgr.c  dberror.h  test_assign4_1.c
assignment_2_fresh/: buffer_mgr.c  buffer_mgr.h  storage_mgr.c  test_assign2_1.c
